Started on backend

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body class="">
 
-<img id="pmImg" class="max-w-[80px] max-h-[80px] min-w-[80px] min-h-[80px]" src="" alt="pokemon img">
+<img id="pmImg" class="h-[200px] w-[200px]" src="" alt="pokemon img">
+<br>
+<button id="shinyBtn" class="border-2 active:border-green-400">Shiny</button>
+<br>
 <br>
 <h1 id="pmName">nameHere</h1>
 <br>
