--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./Src/output.css">
+    <link rel="stylesheet" href="./Src/styles.css">
 </head>
 <body class="">
 
@@ -25,6 +26,11 @@
 <br>
 <div id="pmAbilities" class="bg-amber-400 max-h-16 overflow-auto">
 
+</div>
+<br>
+<h2>Evo path</h2>
+<div id="pmEvolutions">
+    
 </div>
 <br>
 <button id="addFavBtn" class="border-2 active:border-green-400">Add to favorites</button>
