--- a/index.html
+++ b/index.html
@@ -28,14 +28,17 @@
 
 </div>
 <br>
-<h2>Evo path</h2>
+<h2 class="">Evo path</h2>
 <div id="pmEvolutions">
     
 </div>
 <br>
 <button id="addFavBtn" class="border-2 active:border-green-400">Add to favorites</button>
 <br>
-<button id="favBtn" class="border-2 active:border-green-400">Favorites</button>
+<button id="favDropBtn" class="border-2 active:border-green-400">Favorites</button>
+<div id="favorites">
+    favorites here
+</div>
 <br>
 <button id="randomBtn" class="border-2 active:border-green-400">Random</button>
 <br>
